# inventory-manager

./: .all-contributorsrc  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/ISSUE_TEMPLATE/: -relat-rio-de-erro.md  -solicita--o-de-recurso.md
doc/html/: _interface_c_l_i_8cpp.html  _interface_c_l_i_8cpp__incl.map  _interface_c_l_i_8cpp__incl.md5  _interface_c_l_i_8hpp.html  _interface_c_l_i_8hpp__dep__incl.map  _interface_c_l_i_8hpp__dep__incl.md5  _interface_c_l_i_8hpp__incl.map  _interface_c_l_i_8hpp__incl.md5  _interface_c_l_i_8hpp_source.html  _ivy_manager_8cpp.html  _ivy_manager_8cpp__incl.map  _ivy_manager_8cpp__incl.md5  _ivy_manager_8hpp.html  _ivy_manager_8hpp__dep__incl.map  _ivy_manager_8hpp__dep__incl.md5  _ivy_manager_8hpp__incl.map  _ivy_manager_8hpp__incl.md5  _ivy_manager_8hpp_source.html  _produto_8cpp.html  _produto_8cpp__incl.map  _produto_8cpp__incl.md5  _produto_8hpp.html  _produto_8hpp__dep__incl.map  _produto_8hpp__dep__incl.md5  _produto_8hpp__incl.map  _produto_8hpp__incl.md5  _produto_8hpp_source.html  _vetor_8cpp.html  _vetor_8cpp__incl.map  _vetor_8cpp__incl.md5  _vetor_8hpp.html  _vetor_8hpp__dep__incl.map  _vetor_8hpp__dep__incl.md5  _vetor_8hpp__incl.map  _vetor_8hpp__incl.md5  _vetor_8hpp_source.html  annotated.html  classes.html  classivy_1_1_interface_c_l_i-members.html  classivy_1_1_interface_c_l_i.html  (+80 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_2.js  files_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_a.js  functions_b.js  search.css  searchdata.js  variables_0.js
docs/: Doxyfile.in  mainpage.dox  mainpage.md
docs/html/: _interface_c_l_i_8cpp.html  _interface_c_l_i_8cpp__incl.map  _interface_c_l_i_8cpp__incl.md5  _interface_c_l_i_8hpp.html  _interface_c_l_i_8hpp__dep__incl.map  _interface_c_l_i_8hpp__dep__incl.md5  _interface_c_l_i_8hpp__incl.map  _interface_c_l_i_8hpp__incl.md5  _interface_c_l_i_8hpp_source.html  _interface_g_u_i_8cpp.html  _interface_g_u_i_8cpp__incl.map  _interface_g_u_i_8cpp__incl.md5  _interface_g_u_i_8hpp.html  _interface_g_u_i_8hpp__dep__incl.map  _interface_g_u_i_8hpp__dep__incl.md5  _interface_g_u_i_8hpp__incl.map  _interface_g_u_i_8hpp__incl.md5  _interface_g_u_i_8hpp_source.html  _ivy_log_8cpp.html  _ivy_log_8cpp__incl.map  _ivy_log_8cpp__incl.md5  _ivy_log_8hpp.html  _ivy_log_8hpp.js  _ivy_log_8hpp__dep__incl.map  _ivy_log_8hpp__dep__incl.md5  _ivy_log_8hpp__incl.map  _ivy_log_8hpp__incl.md5  _ivy_log_8hpp_source.html  _ivy_main_form_8cpp.html  _ivy_main_form_8cpp__incl.map  _ivy_main_form_8cpp__incl.md5  _ivy_main_form_8hpp.html  _ivy_main_form_8hpp__dep__incl.map  _ivy_main_form_8hpp__dep__incl.md5  _ivy_main_form_8hpp__incl.map  _ivy_main_form_8hpp__incl.md5  _ivy_main_form_8hpp_source.html  _ivy_manager_8cpp.html  _ivy_manager_8cpp__incl.map  _ivy_manager_8cpp__incl.md5  (+320 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+19 more)
inventory-manager/: CMakeLists.txt
inventory-manager/src/: main.cpp
inventory-manager/src/ivy/: ivy.cpp  ivy.hpp  ivy_include.hpp
inventory-manager/src/ivy/interface/: InterfaceCLI.cpp  InterfaceCLI.hpp
inventory-manager/src/ivy/ivy_manager/: IvyManager.cpp  IvyManager.hpp
inventory-manager/src/ivy/produto/: Produto.cpp  Produto.hpp
inventory-manager/src/ivy/vetor/: Vetor.cpp  Vetor.hpp
src/: CMakeLists.txt  CMakeSetup.rc  main.cpp  mainpage.dox
src/ivy/: ivy.hpp
src/ivy/cli/: cli.hpp
src/ivy/interface/: InterfaceCLI.cpp  InterfaceCLI.hpp  InterfaceGUI.cpp  InterfaceGUI.hpp
src/ivy/interface/forms/: include_nana.hpp
src/ivy/ivy_manager/: IvyManager.cpp  IvyManager.hpp
src/ivy/locadora/: Locadora.cpp  Locadora.hpp  LocadoraCLI.cpp  LocadoraCLI.hpp
src/ivy/locadora/jogo/: Jogo.cpp  Jogo.hpp
src/ivy/log/: IvyLog.cpp  IvyLog.hpp
src/ivy/produto/: Produto.cpp  Produto.hpp
src/ivy/vetor/: Vetor.cpp  Vetor.hpp
